smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/annotation-unclosed-object6.smithy
// Syntax error at line 4, column 1: Expected COLON(':') but found IDENTIFIER('string') | Model
namespace com.foo
@foo(bar: "baz", "bam"
string MyString
